plugins {
	id "architectury-plugin" version "3.4-SNAPSHOT"
	id "dev.architectury.loom" version "1.7-SNAPSHOT" apply false
    id('xyz.wagyourtail.jvmdowngrader').version("${jvmdowngrader_version}").apply(false)
}

architectury {
	minecraft = minecraft_version
}

subprojects {
	apply plugin: "dev.architectury.loom"

	loom {
		silentMojangMappingsLicense()
	}

    repositories {
        maven {
            name = 'ParchmentMC'
            url = 'https://maven.parchmentmc.org'
        }
    }

	dependencies {
		minecraft("com.mojang:minecraft:${rootProject.minecraft_version}")
        mappings(loom.layered {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${rootProject.parchment_version}@zip")
        })

        //lombok: https://projectlombok.org/setup/gradle
        compileOnly 'org.projectlombok:lombok:1.18.34'
        annotationProcessor 'org.projectlombok:lombok:1.18.34'
	}
}

allprojects {
	apply plugin: "java"
	apply plugin: "architectury-plugin"
	apply plugin: "maven-publish"
    apply plugin: 'xyz.wagyourtail.jvmdowngrader'

	//not accessible from time to time
//	apply from: "https://files.latmod.com/public/markdown-git-changelog.gradle"

	def ENV = System.getenv()
	version = "${mod_version}-build.${ENV.GITHUB_RUN_NUMBER ?: 9999}"
	group = project.maven_group
	archivesBaseName = project.archives_base_name

	tasks.withType(JavaCompile).configureEach {
		options.encoding = "UTF-8"
		sourceCompatibility = 21

		// The Minecraft launcher currently installs Java 8 for users, so your mod probably wants to target Java 8 too
		// JDK 9 introduced a new way of specifying this that will make sure no newer classes or methods are used.
		// We'll use that if it's available, but otherwise we'll use the older option.
//		options.release = 8
	}

	repositories {
		maven {
			url "https://cursemaven.com"
			content {
				includeGroup "curse.maven"
			}
		}

		maven {
			url "https://maven.architectury.dev/"
		}

		maven {
			url "https://maven.saps.dev/minecraft"
			content {
				includeGroup "dev.ftb.mods"
			}
		}

		maven {
			url "https://maven.nanite.dev"
		}
	}

	java {
		withSourcesJar()
	}
}